# train-captcha-code

./: .gitignore  NOTE.md  README.md  app.py  pyproject.toml
src/train_captcha_code/: train_app.py
src/train_captcha_code/_logger/: __init__.py  _logger.py  log.py
src/train_captcha_code/config/: base.py  captcha_data_set.py  download.py  train_config.py
src/train_captcha_code/data_set/: __init__.py  base.py  data_set.py
src/train_captcha_code/downloader/: __init__.py  downloader.py
src/train_captcha_code/loader/: __init__.py  loader.py
src/train_captcha_code/model/: model.py
src/train_captcha_code/project_typing/: __init__.py  _pytorch.py  _typing.py
src/train_captcha_code/schema/: capcha_code_response.py  verification_code_response.py
src/train_captcha_code/service/: captcha_code_pic_service.py
src/train_captcha_code/train/: __init__.py  base.py  train.py
src/train_captcha_code/utils/: utils.py
src/train_captcha_code/utils/_loop/: to_async.py
src/train_captcha_code/utils/model/: utils.py
src/train_captcha_code/utils/sync/: fetch.py
src/train_verification_code/schema/: verification_code_response.py
src/train_verification_code/service/: captcha_code_pic_service.py  verification_code_pic_service.py
src/train_verification_code/utils/: fetch.py  file.py
src/train_verification_code/utils/_async/: _file.py  file.py
src/train_verification_code/utils/_loop/: excutor.py
src/train_verification_code/utils/sync/: file.py
tests/test_download_pic/: test_async_download_pic.py  test_download_pic.py
tests/test_downloader/: test_downloader.py
tests/test_fetch/: test_fetch.py
tests/test_load_config/: test_check_ratio_config.py  test_load_config.py
tests/test_loader/: test_loader.py  test_loader_class.py
tests/test_write/: test_write.py
